modified logic to convert json file

--- a/COCO_conversion.ipynb
+++ b/COCO_conversion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,11 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_dimensions(data):\n",
+    "def find_dimensions(data, bounding=False):\n",
     "    left_x, right_x, top_y, bottom_y = float('inf'), 0, float('inf'), 0\n",
     "    for item in data['form']:\n",
     "        top_left = {\n",
@@ -35,18 +35,44 @@
     "        top_y = min(top_y, top_left['y'])\n",
     "    width = right_x - left_x\n",
     "    height = bottom_y - top_y\n",
-    "    return width, height"
+    "#     print(\"returning dimensions\")\n",
+    "    if not bounding:\n",
+    "        return width, height\n",
+    "    return left_x, right_x, bottom_y, top_y\n",
+    "#     return width, height if not bounding else left_x, right_x, bottom_y, top_y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "def crop_img(img_file):\n",
     "    img = cv2.imread(img_file)\n",
-    "    crop_img = img[25:977, 27:443]\n",
+    "    \n",
+    "    \n",
+    "    to_json = img_file.split('/')[-1].split('.')[0] + '.json'\n",
+    "#     print(to_json)\n",
+    "    anno_file = '/'.join(img_file.split('/')[:-2]+['annotations', to_json])\n",
+    "    \n",
+    "    with open(anno_file, \"r\") as file:\n",
+    "        data = json.load(file)\n",
+    "    \n",
+    "    left_x, right_x, bottom_y, top_y = find_dimensions(data, bounding=True)\n",
+    "#     crop_img = img[left_x:(left_x + right_x), top_y:(top_y + bottom_y)]\n",
+    "#     print(\"left_x\", left_x)\n",
+    "#     print(\"right_x\", right_x)\n",
+    "#     print(\"top_y\", top_y)\n",
+    "#     print(\"bottom_y\", bottom_y)\n",
+    "#     left_x 16\n",
+    "#     right_x 400\n",
+    "#     top_y 50\n",
+    "#     bottom_y 958\n",
+    "#     return\n",
+    "    \n",
+    "    crop_img = img[top_y:(top_y + bottom_y), left_x:(left_x + right_x)]\n",
+    "#     print(\"a\")\n",
     "#     filename = \"data.json\"\n",
     "    directory = \"data/training_data/cropped\"\n",
     "    filename = img_file.split('/')[-1]\n",
@@ -67,15 +93,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "directory = \"data/training_data/images\"\n",
     "images = sorted(glob('data/training_data/images/*.jpg'))\n",
     "\n",
-    "# for img in images:\n",
-    "#     crop_img(img)\n",
+    "# for img in images[1:]:\n",
+    "# #     crop_img(img)\n",
+    "#     image = cv2.imread(img,0)\n",
+    "#     height, width = image.shape[:2]\n",
+    "#     print(\"height\", height)\n",
+    "#     print('width', width)\n",
     "\n",
     "\n",
     "\n",
@@ -92,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -111,10 +141,15 @@
     "# test_files = sorted(glob('./test/*.txt'))\n",
     "dataset_array = []\n",
     "\n",
-    "for idx, f in enumerate(test_files[1:]):\n",
+    "# for x, y in zip(a, b):\n",
+    "#     print x, y\n",
+    "\n",
+    "for idx, (f, img) in enumerate(zip(test_files[1:], images[1:])):\n",
     "    with open(f, \"r\") as file:\n",
     "        data = json.load(file)\n",
-    "        width, height = find_dimensions(data)\n",
+    "#         width, height = find_dimensions(data)\n",
+    "        image = cv2.imread(img,0)\n",
+    "        height, width = image.shape[:2]\n",
     "        data['image_id'] = idx\n",
     "        f_name = ''.join([f.split('/')[-1].split('.')[0], '.jpg'])\n",
     "        data['file_name'] = f_name\n",
@@ -193,7 +228,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "left_x 16\n",
+    "right_x 400\n",
+    "top_y 50\n",
+    "bottom_y 958"
+   ]
   }
  ],
  "metadata": {
